# infra-core-sdk

./: .gitignore  CHANGELOG.md  Documentação Preparar e subir para PyPi.docx  Documentação de Uso.docx  PROMPT EXTREMO PUB.txt  README.md  Uso local em outro projeto.docx  prompt padrao publica SDK.txt  promt para implementar resto dos testes.txt  pyproject.py  pyproject.toml  teste.py  tree.txt
.github/workflows/: ci.yml
casos_de_uso/: setup.py
casos_de_uso/new_secret/: pipefy.json  secret.key  sharepoint.json
casos_de_uso/secret/: pipefy.json  secret.key  sharepoint.json
secrets/: key.key  pipefy.json  sharepoint.json
src/infra_core/: __init__.py
src/infra_core/core/: __init__.py
src/infra_core/core/path/: __init__.py  exceptions.py  path_config.py  path_config_provider.py  path_definition.py  path_manager.py  root_resolver.py
src/infra_core/core/root/: exceptions.py  root_config.py  root_config_provider.py  root_resolver.py
src/infra_core/credentials/: __init__.py  credentials_exceptions.py
src/infra_core/credentials/exceptions/: credentials_exceptions.py
src/infra_core/credentials/models/: __init__.py  (+1 more)
src/infra_core/exceptions/: __init__.py  base.py
src/infra_core/security/: __init__.py  encryption_factory.py  fernet_encryption.py
tests/: test_loader.py  test_service.py  test_setup.py
tests/core/path/: test_path_config.py  test_path_definition.py  test_path_manager.py
tests/core/root/: test_root_resolver.py
tests/credentials/services/: test_credentials_loader.py  test_credentials_service.py  test_credentials_setup_service.py
(+4 files in other folders)
